--- a/react_intro/task_2/dashboard/src/Notifications.css
+++ b/react_intro/task_2/dashboard/src/Notifications.css
@@ -1,7 +1,15 @@
 .notifications {
 	display:  flex;
+	flex-direction: column;
 	border: dotted 2px #e1003c ;
 	padding-left: 15px;
-	height: 40px;
-	align-items: center;
+	height: 150px;
+}
+
+.notifications li[data-priority='default'] {
+	color: blue;
+}
+
+.notifications li[data-priority='urgent'] {
+	color: #e1003c !important;
 }
