--- a/react_intro/task_5/dashboard/src/App/App.css
+++ b/react_intro/task_5/dashboard/src/App/App.css
@@ -17,6 +17,9 @@
 .App-header h1 {
   display: flex;
   align-items: center;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: 600;
+  color: #e1003c;
 }
 
 .App-body {
