--- a/react_intro/task_5/dashboard/src/App/App.css
+++ b/react_intro/task_5/dashboard/src/App/App.css
@@ -23,7 +23,8 @@
 }
 
 .App-body {
-  height: 600px;
+  height: 5%;
+  height: 500px;
   border-top: solid #e1003c 1px;
   border-bottom: solid #e1003c 1px;
 }
